# qa-pytest

./: .gitignore  Makefile  README.md  pyproject.toml
classes/: books_collector.py
tests/: conftest.py  test_class_books_collector.py
